@startuml diagramme_classes_pedagogie
!theme plain

skinparam dpi 300
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
hide empty members

skinparam nodesep 20
skinparam ranksep 48

skinparam class {
    BackgroundColor White
    BorderColor #142B4B
    BorderThickness 1.2
    ArrowColor #142B4B
    ArrowThickness 1.3
    FontColor #142B4B
    FontStyle Bold
    AttributeFontColor #23282F
    AttributeFontStyle Normal
    AttributeFontSize 12
}

skinparam title {
    FontColor #142B4B
    FontSize 20
    FontStyle Bold
}

title Diagramme de classes — Structure pédagogique et groupes

abstract class AuditableEntity {
  - id : UUID
  # createdAt : Instant
  # updatedAt : Instant
}

class User {
  - email : String
  - fullName : String
  - role : Role
  - enabled : boolean
  - year2AccessEnabled : boolean
}

class LearnerGroup {
  - name : String
  - code : String
  - startDate : LocalDate
  - endDate : LocalDate
  - enrollmentMode : EnrollmentMode
}

class GroupContentAssignment {
  - ufCode : String
  - unlockAt : Instant
}

class Formation {
  - title : String
  - published : boolean
}

class ModuleEntity {
  - code : String
  - title : String
  - orderIndex : int
  - yearNumber : int
  - ufCode : String
  - ufTitle : String
  - published : boolean
}

class Lesson {
  - title : String
  - orderIndex : int
  - published : boolean
}

class LessonBlock {
  - blockType : BlockType
  - content : Map
  - orderIndex : int
}

class LessonProgress {
  - videoWatchedPercent : int
  - completed : boolean
  - completedAt : Instant
}

enum Role {
  SUPER_ADMIN
  ADMIN
  FORMATEUR
  ETUDIANT
  SUPPORT
}

enum EnrollmentMode {
  EN_LIGNE
  HYBRIDE
}

enum BlockType {
  VIDEO
  TEXT
  PDF
  IMAGE
}

AuditableEntity <|-- User
AuditableEntity <|-- LearnerGroup
AuditableEntity <|-- GroupContentAssignment
AuditableEntity <|-- Formation
AuditableEntity <|-- ModuleEntity
AuditableEntity <|-- Lesson
AuditableEntity <|-- LessonBlock
AuditableEntity <|-- LessonProgress

User ..> Role
LearnerGroup ..> EnrollmentMode
LessonBlock ..> BlockType

User "0..N" -- "0..1" LearnerGroup : membre >
LearnerGroup "1" *-- "0..N" GroupContentAssignment
GroupContentAssignment "0..N" --> "1" ModuleEntity

Formation "1" *-- "0..N" ModuleEntity
ModuleEntity "1" *-- "0..N" Lesson
Lesson "1" *-- "0..N" LessonBlock
User -- "0..N" LessonProgress
Lesson -- "0..N" LessonProgress

@enduml
